# BarrierPoint

./: .gitignore  DrAnalysis.py  LICENSE-MIT.txt  Makefile  README.md  RunBenchmarks.py  configs.json  configs_plot.json  errorEstimate.py  plot-BarrierPoint.sh  run-BarrierPoint.sh  simpoint.patch
barrierpoint-libs/: Makefile  bp_dr.cc  bp_perfcntrs.cc  omp_counters.h  sim_api.h
dynamorio_client/: CMakeLists.txt  LICENSE-BSD-LGPL.txt  README.md  barrierpoint.cpp  main.cpp  region.cpp  reuse_distance.cpp  thread_data.cpp
dynamorio_client/include/: barrierpoint.hpp  region.hpp  reuse_distance.hpp  reuse_distance_impl.h  thread_data.hpp
sample/: Makefile  matrixmul.c
